# smart-tech-pdv-3

./: .env.e2e.example  .env.example  .env.sales  .gitignore  ACOES_EXECUTADAS_PROX_PASSOS.md  ADICIONAR_CLIENTE_TELEFONE_SUPABASE.md  AJUSTE_MARGENS_SYNC_STATUS.md  ANALISE_BUGS_CRITICOS.md  ANALISE_COMPLETA_SCHEMA_VS_CODIGO.md  ANALISE_FINAL_SISTEMA.md  ANALISE_PRE_VENDA_FINAL.md  ANALISE_SCHEMA_ATUALIZADO.md  ANALISE_SCHEMA_SUPABASE.md  ANALISE_SIMULAR_TAXAS_RESPONSIVIDADE.md  ANALISE_SINCRONIZACAO_COMPLETA.md  ANALISE_SISTEMA_COMPLETA.md  ANALISE_SISTEMA_FINANCEIRO_ESTORNOS.md  ANALISE_SUPABASE_MIGRATIONS.md  ANALISE_SYNC_EXCLUSOES.md  APLICAR_CORRECAO.bat  ATUALIZACAO_AUTOMATICA_METRICAS.md  ATUALIZACAO_TAXAS_PADRAO_WHATSAPP.md  AUDITORIA_CAMPOS_SUPABASE.md  AUDITORIA_COMPLETA_FINAL.md  AUDITORIA_COMPLETA_OK.md  AUDITORIA_FINAL_SYNC_BACKUP_MOBILE.md  AUDITORIA_LOGIN_SYNC_UI.md  AUDITORIA_PRE_VENDA.md  AUDITORIA_SISTEMA_FINANCEIRO.md  AUDITORIA_UI_NIVEL_SAAS.md  AUDITORIA_VENDAS_COMPLETA.md  BUGS_ENCONTRADOS_PRODUCAO.md  BUG_BOTAO_NOVA_ORDEM.md  BUG_VENDAS_SYNC_SEM_RETRY.md  BUILD_FINAL_CORRECOES.md  BUILD_PRODUCAO.md  CHANGELOG.md  CHECKLIST_BUILD_FINAL.md  CHECKLIST_FINAL_100_PORCENTO.md  CHECKLIST_FLOATING_ACTION_BAR.md  (+261 more)
docs/: ARQUIVOS_ALTERADOS.md  AUDITORIA_COMPLETA.md  AUDITORIA_ROTAS_LOGIN.md  (+43 more)
src-tauri/: .gitignore  2  Cargo.toml  tauri.conf.json  tauri.prod.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/resources/: README_SUMATRA.txt
src-tauri/src/: device.rs  escpos.rs  lib.rs  main.rs  print.rs  printers.rs
(+544 files in other folders)
