[package]
name = "smart-tech-pdv"
version = "2.0.42"
description = "Smart Tech PDV (Desktop)"
authors = ["Smart Tech"]
edition = "2021"

[lib]
name = "smart_tech_pdv_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", default-features = false, features = ["wry", "common-controls-v6", "compression", "dynamic-acl", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-log = "2"
tauri-plugin-shell = "2"
tauri-plugin-rusqlite2 = { version = "2.2.7", default-features = false, features = ["bundled", "backup", "blob"] }
log = "0.4"

base64 = "0.22"
windows = { version = "0.61.3", features = ["Win32_Foundation", "Win32_Graphics_Printing", "Win32_Graphics_Gdi"] }

# OBRIGATORIO: declarar rusqlite diretamente para propagar a feature
# load_extension para o plugin tauri-plugin-rusqlite2.
# Sem esta linha o Cargo nao ativa load_extension_enable/disable/load_extension.
rusqlite = { version = "0.38", features = ["bundled", "load_extension"] }
